# project-euler-notes

./: README.md
cpp/: run.ps1
cpp/src/001-problem/: CMakeLists.txt  build.ps1  main.cpp
cpp/src/001-problem/includes/: CMakeLists.txt  helpers.cpp  helpers.h
js/: helper.js  package.json  run.ps1
js/src/001-problem/: index.js
ruby/: Gemfile  helper.rb  run.ps1
ruby/app/001-problem/: main.rb  run.ps1
